<?xml version="1.0"?>
<package>
  <name>waypoint_follower</name>
  <version>1.0.0</version>
  <description>The waypoint_follower package</description>
  <maintainer email="subir.das1@gmail.com">subir</maintainer>
  <maintainer email="jvjctk@gmail.com">Job Vakayil Jose</maintainer>
  <maintainer email="jorge.sanchezfuentes@gmail.com">Jorge Sanchez</maintainer>
  <maintainer email="marius.juston@hotmail.fr">Marius Juston</maintainer>
  <license>MIT</license>
  <author email="NagoyaUniversity@nagoya.com">Nagoya University</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>styx_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>styx_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export><!-- Other tools can request additional information be placed here --></export>
</package>
